2020-05-27 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_button_event_window

    * src/widgets/geda_option_menu.c Utilize macro:

          * geda_get_container_border_width
          * geda_set_widget_allocation
          * geda_get_button_event_window

2020-05-26 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Replace gdk_screen_get_monitor_at_window
      with gdk_display_get_monitor_at_window and gdk_screen_get_monitor_workarea
      with gdk_monitor_get_workarea in gtk3::geda_menu_item_position_menu.

    * src/widgets/geda_option_menu.c Utilize macro:

          * geda_get_widget_style

2020-05-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_shell.c: Add Doxygen group geda-menu-shell-wcvo.
      Convert plain source documentation to Doxygen documentation. Utilize
      macro:

          * geda_get_widget_allocation
          * geda_set_widget_window

2020-05-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Defer calling get_offsets and reduce the
      scope of offset integers in geda_menu_item_position_menu. Revise
      geda_menu_item_popup_timeout to use ancillary Booleans parent_is_menu
      and parent_is_menushell and replace dynamic cast with static cast.

2020-05-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_shell.c: Revise geda_menu_shell_button_press to
      not redundantly reassign parent in the third conditional.

2020-05-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_shell.c: Replace GTK_TOP_BOTTOM with
      MENU_TOP_BOTTOM. Utilize macro:

          * geda_get_widget_parent

2020-05-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Reduce scope of parent_menu_item in
      function geda_menu_item_position_menu.

2020-05-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Remove unnecessary cast to GedaMenuShell